# sc-ui-schema

./: .gitignore  .taplo.toml  Cargo.toml  LICENSE  Makefile  README.md  build.py  validate.py
.cargo/: config.toml
docs/: README.en.md
src/: UiType.ts  main.rs  ui.schema.json
