[package]
name = "ui-schema-validator"
version = "0.1.0"
edition = "2021"
description = "Semantic validator for Supercell's .ui (TOML) files"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.3"
walkdir = "2"
thiserror = "2"
regex = "1"
